Minor wording changes

--- a/app/views/bank-success.html
+++ b/app/views/bank-success.html
@@ -64,7 +64,7 @@
             </tbody>
           </table>
           <br>
-          <p class="govuk-body">Connect to HMRC and DWP to submit evidence about tax and any benefits.</p>
+          <p class="govuk-body">Now connect to HMRC and DWP to provide evidence about tax and benefits.</p>
 
           <a class="govuk-c-button govuk-c-button" href="/dwpdetails" role="button">Continue</a>&nbsp;&nbsp;&nbsp;&nbsp;
           <a class="govuk-c-back-link" href="/obbank">Back</a>
