--- a/app/views/check-evidence.html
+++ b/app/views/check-evidence.html
@@ -107,7 +107,7 @@
 
           <div class="govuk-c-checkboxes__item">
             <input class="govuk-c-checkboxes__input" id="confirm" name="confirm" type="checkbox" required>
-            <label class="govuk-c-label govuk-c-checkboxes__label" for="confirm">I confirm that everything I input is truthful and that I have not omitted anything.</label>
+            <label class="govuk-c-label govuk-c-checkboxes__label" for="confirm">I have provided all the evidence and not left anything out</label>
           </div>
 
           </br>
