--- a/app/views/means-result.html
+++ b/app/views/means-result.html
@@ -26,7 +26,7 @@
         </h1>
 
         <p class="govuk-body">
-          Some text here.
+          Based on the information we have, the client is eligible for Legal Aid. We’ll make a final decision after the application has been submitted.
         </p>
 
         <h2 class="govuk-heading">
