--- a/app/views/valuables.html
+++ b/app/views/valuables.html
@@ -20,20 +20,23 @@
       <div class="govuk-o-grid__item govuk-o-grid__item--two-thirds">
 
         <h1 class="govuk-heading-xl">
-          Valuables
+          Valuable items
         </h1>
 
-        <p class="govuk-body">
-          Some text here.
+        <p class="govuk-body">Do you own anything valuable (worth £500 or more) like:
+          <ul>
+            <li>jewellery</li>
+            <li>antiques</li>
+            <li>paintings</li>
+            <li>collectable items</li>
+            <li>horses or boats</li>
+          </ul>
         </p>
 
         <form class="form" action="/means-result" method="post">
 
           <div class="govuk-c-radios">
             <fieldset class="govuk-c-fieldset" data-required data-error="Cannot be blank">
-              <legend class="govuk-c-fieldset__legend">
-                <h4 class="govuk-heading">Do you have any valuable possessions (valued greater or equal to £500) e.g. jewellery, antiques, paintings, collectable items, horses or boats?</h4>
-              </legend>
               <div class="govuk-c-radios__item">
                 <input class="govuk-c-radios__input" id="valuables-1" name="valuables" type="radio" value="yes" required>
                 <label class="govuk-c-label govuk-c-radios__label" for="valuables-1">
