copy changes and formatting

--- a/app/views/capital-assets.html
+++ b/app/views/capital-assets.html
@@ -23,16 +23,15 @@
           Capital and other assets
         </h1>
 
-        <p class="govuk-body">
-          Do you have any other bank, savings accounts or access to funds? This might include:
+        <p class="govuk-body">Do you have any other bank, savings accounts or access to funds? <br> This might include: </br> </p>
 
-          <ul>
-            <li></li>
-            <li></li>
-            <li></li>
-          </ul>
 
-        </p>
+
+        <ul class="govuk-list govuk-list--bullet">
+          <li></li>
+          <li></li>
+          <li></li>
+        </ul>
 
         <form class="form" action="/valuables" method="post">
 
