--- a/app/views/dwpconf.html
+++ b/app/views/dwpconf.html
@@ -20,7 +20,7 @@
       <div class="govuk-o-grid__item govuk-o-grid__item--two-thirds">
 
         <h1 class="govuk-heading-xl">
-          Is this correct?
+          Is this information correct?
         </h1>
 
         <h2 class="govuk-heading-m">
@@ -71,7 +71,7 @@
           </div>
         </dl>
         </br>
-        <a href="/eviconf" class="govuk-c-button">Continue</a>&nbsp;&nbsp;&nbsp;&nbsp;
+        <a href="/empstatus" class="govuk-c-button">Continue</a>&nbsp;&nbsp;&nbsp;&nbsp;
         <a class="govuk-c-back-link" href="/dwpdetails">Back</a>
 
       </div>
