--- a/app/views/eviconf.html
+++ b/app/views/eviconf.html
@@ -14,47 +14,41 @@
 
   <main role="main" class="govuk-o-main-wrapper">
 
-    <p class="govuk-body"><b>Step 8 of 16</b></p>
+    <p class="govuk-body"><b>Step 9 of 16</b></p>
 
     <div>
       <div class="govuk-o-grid">
         <div class="govuk-o-grid__item govuk-o-grid__item--two-thirds">
 
           <h1 class="govuk-heading-xl">
-            We automatically capture your means evidence
+            What evidence we need for your submission
           </h1>
 
-          <p class="govuk-body">Evidence we collect for <b>means assessment</b></p>
+          <p class="govuk-body">placeholder text</p>
 
           <ul class="govuk-list govuk-list--bullet">
             <li>Employed income</li>
             <li>Childcare</li>
-            <li>Private pension</li>
-            <li>Employer pension</li>
-            <li>Board or rent</li>
+            <li>BIK (P11D)</li>
+            <li>P60</li>
+            <li>Self assessment</li>
+            <li>State benefits and tax credits</li>
+            <li>Private pension income</li>
+            <li>Employer pension income</li>
+            <li>Student grant or loan</li>
+            <li>Board or rent (income)</li>
+            <li>Any other income</li>
             <li>Maintainance payments</li>
-            <li>Housing costs</li>
+            <li>Housing costs (rent)</li>
+            <li>Housing benefit</li>
+            <li>Mortgage payments</li>
           </ul>
-
-          <hr>
-          </br>
-
-          <p class="govuk-body">Evidence we collect for <b>capital assessment</b></p>
-
-          <ul class="govuk-list govuk-list--bullet">
-            <li>Bank savings account</li>
-            <li>Bank current account</li>
-            <li>Building society account</li>
-            <li>ISAs</li>
-          </ul>
-
-          <p class="govuk-body"><b>We may need help with other types of evidence that we can't see from your bank statements or HMRC records.</b></p>
 
         </div>
 
       </div>
 
-      <a class="govuk-c-button govuk-c-button" href="/empstatus" role="button">Continue</a>&nbsp;&nbsp;&nbsp;&nbsp;
+      <a class="govuk-c-button govuk-c-button" href="/identify-evidence" role="button">Continue</a>&nbsp;&nbsp;&nbsp;&nbsp;
       <a class="govuk-c-back-link" href="/dwpconf">Back</a>
 
     </div>
