--- a/app/views/valuables.html
+++ b/app/views/valuables.html
@@ -23,15 +23,16 @@
           Valuable items
         </h1>
 
-        <p class="govuk-body">Do you own anything valuable (worth £500 or more) like:
-          <ul>
-            <li>jewellery</li>
-            <li>antiques</li>
-            <li>paintings</li>
-            <li>collectable items</li>
-            <li>horses or boats</li>
-          </ul>
-        </p>
+        <p class="govuk-body">Do you own anything valuable (worth £500 or more) like:</p>
+
+        <ul class="govuk-list govuk-list--bullet">
+          <li>jewellery</li>
+          <li>antiques</li>
+          <li>paintings</li>
+          <li>collectable items</li>
+          <li>horses</li>
+          <li>boats</li>
+        </ul>
 
         <form class="form" action="/means-result" method="post">
 
