--- a/app/views/benefits-kind.html
+++ b/app/views/benefits-kind.html
@@ -24,16 +24,19 @@
         </h1>
 
         <p class="govuk-body">
-          Do you get benefits from work that are not money - eg company car, luncheon vouchers, or free health insurance?
+          Do you get benefits from work that are not money? This might include:
         </p>
+
+        <ul class="govuk-list govuk-list--bullet">
+          <li>A company car</li>
+          <li>Luncheon vouchers</li>
+          <li>Free health insurance</li>
+        </ul>
 
         <form class="form" action="/capital-assets" method="post">
 
           <div class="govuk-c-radios">
             <fieldset class="govuk-c-fieldset">
-              <legend class="govuk-c-fieldset__legend">
-                <h4 class="govuk-heading">Do you get benefits from work that are not money?</h4>
-              </legend>
               <div class="govuk-c-radios__item">
                 <input class="govuk-c-radios__input" id="benefits-in-kind-1" name="benefits-in-kind" type="radio" value="yes" required>
                 <label class="govuk-c-label govuk-c-radios__label" for="benefits-in-kind-2">
