--- a/app/views/empstatus.html
+++ b/app/views/empstatus.html
@@ -1,4 +1,4 @@
-{% extends "layout.html" %} {% block page_title %} QEvidence submission prototype {% endblock %} {% block content %}
+{% extends "layout.html" %} {% block page_title %} Evidence submission prototype {% endblock %} {% block content %}
 
 <div class="govuk-o-width-container">
 
@@ -14,7 +14,7 @@
 
   <main role="main" class="govuk-o-main-wrapper">
 
-    <p class="govuk-body"><b>Step 9 of 16</b></p>
+    <p class="govuk-body"><b>Step 8 of 16</b></p>
 
     <div class="govuk-o-grid">
       <div class="govuk-o-grid__item govuk-o-grid__item--two-thirds">
@@ -22,7 +22,7 @@
         <h2 class="govuk-heading-xl">
           Employment details
         </h2>
-        <form class="form" action="/identify-evidence" method="get">
+        <form class="form" action="/eviconf" method="get">
 
 
           <div class="govuk-c-radios">
@@ -85,7 +85,7 @@
             </fieldset>
           </div>
           <input class="govuk-c-button" type="submit" value="Continue">&nbsp;&nbsp;&nbsp;&nbsp;
-          <a class="govuk-c-back-link" href="./eviconf">Back</a>
+          <a class="govuk-c-back-link" href="./dwpconf">Back</a>
         </form>
       </div>
     </div>
