--- a/app/views/identify-evidence.html
+++ b/app/views/identify-evidence.html
@@ -1,4 +1,4 @@
-{% extends "layout.html" %} {% block page_title %} QEvidence submission prototype {% endblock %} {% block content %}
+{% extends "layout.html" %} {% block page_title %} Evidence submission prototype {% endblock %} {% block content %}
 
 <script src="/public/javascripts/jquery-1.11.3.js"></script>
 
@@ -88,14 +88,14 @@
       <div class="govuk-o-grid__item govuk-o-grid__item">
 
         <h1 class="govuk-heading-xl">
-          Select your incoming and outgoing evidence for submission
+          Select your evidence for submission
         </h1>
 
         <form class="form" action="/check-evidence" method="post">
 
           <div>
             <table class="govuk-c-table" style="table-layout:fixed;">
-              <caption class="govuk-c-table__caption">Togetherbank Current Account<br>Account Number: 123456789</caption>
+              <caption class="govuk-c-table__caption">Your bank account<br>Account Number: 123456789</caption>
               <thead class="govuk-c-table__head">
                 <tr class="govuk-c-table__row">
                   <th class="govuk-c-table__header" scope="col" width="150">Date</th>
