--- a/app/views/obconsent.html
+++ b/app/views/obconsent.html
@@ -24,19 +24,21 @@
           <div class="govuk-c-checkboxes">
             <fieldset class="govuk-c-fieldset">
               <legend class="govuk-c-fieldset__legend">
-                <h1 class="govuk-heading-xl">Can we collect evidence on your behalf?</h1>
+                <h1 class="govuk-heading-xl">Can we collect this information for you?</h1>
               </legend>
 
-              <p class="govuk-body">To help provide evidence we need access to:</p>
+              <p class="govuk-body">To be able to collect your financial information we need access to:</p>
 
-              <ul>
+              <ul class="govuk-list govuk-list--bullet">
                 <li>your bank or building society account</li>
                 <li>your tax information</li>
               </ul>
 
+              <p class="govuk-body">If you give us permission, we can collect this kind of information from your bank and other government departments. We may still need help with other types of information</p>
+
               <div class="govuk-heading-m"><img src="public/images/padlock.png" alt="padlock" height="42" width="42" style="vertical-align: middle"> Your bank account</div>
 
-              <p class="govuk-body">We'll only connect to your bank or building society for applying for Legal Aid.</p>
+              <p class="govuk-body"> <b> We'll only connect to your bank or building society for applying for Legal Aid.</b> </p>
 
               <div class="govuk-c-checkboxes__item">
                 <input class="govuk-c-checkboxes__input" id="open-banking" name="open-banking" type="checkbox">
@@ -44,29 +46,6 @@
                 <label class="govuk-c-label govuk-c-checkboxes__label" for="open-banking">
                   The Legal Aid Agency can access my bank or building society account
                 </label>
-
-                <details>
-                  <summary style="text-decoration: underline; color: #0000EE;"><span class="summary" style="text-decoration: underline; color: #0000EE;">Account details - Used to work out your overall financial situation (capital assets)</span></summary>
-                  <div class="panel panel-border-narrow">
-                    <p class="govuk-body">
-                      Some text about account details.
-                    </p>
-                    <p class="govuk-body">
-                      Some more text about account details.
-                    </p>
-                  </div>
-                </details>
-                <details>
-                  <summary style="text-decoration: underline; color: #0000EE;"><span class="summary" style="text-decoration: underline; color: #0000EE;">3 months transaction history - Used to work out your incoming and outgoing money</span></summary>
-                  <div class="panel panel-border-narrow">
-                    <p class="govuk-body">
-                      Some text about transactions.
-                    </p>
-                    <p class="govuk-body">
-                      Some more text about transactions.
-                    </p>
-                  </div>
-                </details>
               </div>
               </br>
               <hr>
@@ -77,32 +56,14 @@
               <div class="govuk-c-checkboxes__item">
                 <input class="govuk-c-checkboxes__input" id="other-departments" name="other-departments" type="checkbox">
                 <label class="govuk-c-label govuk-c-checkboxes__label" for="other-departments">
-                  The Legal Aid Agency can access the following information from other government departments
+                  The Legal Aid Agency can access the following information from:
                 </label>
-
-                <details>
-                  <summary style="text-decoration: underline; color: #0000EE;"><span class="summary">HMRC: Reported income and tax</span></summary>
-                  <div class="panel panel-border-narrow">
-                    <p class="govuk-body">
-                      Some text about HMRC.
-                    </p>
-                    <p class="govuk-body">
-                      Some more text about HMRC.
-                    </p>
-                  </div>
-                </details>
-                <details>
-                  <summary style="text-decoration: underline; color: #0000EE;"><span class="summary">DWP: Receipt of passported benefits</span></summary>
-                  <div class="panel panel-border-narrow">
-                    <p class="govuk-body">
-                      Some text about DWP.
-                    </p>
-                    <p class="govuk-body">
-                      Some more text about DWP.
-                    </p>
-                  </div>
-                </details>
-
+                <p>
+                <ul class="govuk-list govuk-list--bullet">
+                  <li>HMRC - income and tax</li>
+                  <li>DWP - if you are getting any benefits</li>
+                </ul>
+                </p>
               </div>
             </fieldset>
           </div>
