--- a/app/views/obexpress.html
+++ b/app/views/obexpress.html
@@ -20,33 +20,47 @@
           <p class="govuk-body"><b>Step 2 of 16</b></p>
 
           <h1 class="govuk-heading-xl">
-            We need evidence to support your assessment
+            Asssessing your application
           </h1>
 
-          <p class="govuk-body">To complete your assessment application we need to know how much you earn, how much you spend, and whether you’re getting any benefits.</p>
-
-          <p class="govuk-body">To collect some of the evidence we need to connect to your bank and other government departments.</p>
-
-          <p class="govuk-body">Evidence we can collect for means assessment:</p>
+          <p class="govuk-body">To assess your application for legal aid we need to know:</p>
 
           <ul class="govuk-list govuk-list--bullet">
-            <li>How much you earn (income)</li>
-            <li>Any Childcare payments</li>
-            <li>Private Pension</li>
-            <li>Employer pension</li>
-            <li>Board or rent payments</li>
-            <li>Maintainance payments</li>
-            <li>Housing costs</li>
+            <li>How much you earn</li>
+            <li>How much you spend</li>
+            <li>If you are getting any benefits - like housing benefit or universal credit</li>
           </ul>
 
-          <p class="govuk-body">Evidence we can collect for capital assessment:</p>
+          <p class="govuk-body">We will use any evidence you provide to support your application for legal aid</p>
 
-          <ul class="govuk-list govuk-list--bullet">
-            <li>Bank savings</li>
-            <li>Bank or building society account balance</li>
-            <li>ISA held at your bank</li>
-          </ul>
+          <details class="govuk-c-details">
+            <summary class="govuk-c-details__summary">
+              <span class="govuk-c-details__summary-text">
+                See more about the information we collect
+              </span>
+            </summary>
+            <div class="govuk-c-details__text">
+              <p class="govuk-body">To help us work out how much you can afford, we'll collect information about:</p>
 
+              <ul class="govuk-list govuk-list--bullet">
+                <li>How much you earn (income)</li>
+                <li>Any Childcare payments</li>
+                <li>Private Pension</li>
+                <li>Employer pension</li>
+                <li>Board or rent payments</li>
+                <li>Maintainance payments</li>
+                <li>Housing costs</li>
+              </ul>
+
+              <p class="govuk-body">To help us work out how much you have saved, we'll collect information about:</p>
+
+              <ul class="govuk-list govuk-list--bullet">
+                <li>Bank savings</li>
+                <li>Bank or building society account balance</li>
+                <li>ISA held at your bank</li>
+              </ul>.
+            </div>
+          </details>
         </div>
 
       </div>
