added addtional capital assets pages and modified copy

--- a/app/views/capital-assets.html
+++ b/app/views/capital-assets.html
@@ -14,7 +14,7 @@
 
   <main role="main" class="govuk-o-main-wrapper">
 
-    <p class="govuk-body"><b>Step 13 of 16</b></p>
+    <p class="govuk-body"><b>Step 12 of 17</b></p>
 
     <div class="govuk-o-grid">
       <div class="govuk-o-grid__item govuk-o-grid__item--two-thirds">
@@ -23,17 +23,10 @@
           Capital and other assets
         </h1>
 
-        <p class="govuk-body">Do you have any other bank, savings accounts or access to funds? <br> This might include: </br> </p>
+        <p class="govuk-body">Do you have any other bank, savings accounts or access to funds? </p>
 
 
-
-        <ul class="govuk-list govuk-list--bullet">
-          <li></li>
-          <li></li>
-          <li></li>
-        </ul>
-
-        <form class="form" action="/valuables" method="post">
+        <form class="form" action="/capitalselect" method="post">
 
           <div class="govuk-c-radios">
             <fieldset class="govuk-c-fieldset">
