--- a/app/views/identify-evidence.html
+++ b/app/views/identify-evidence.html
@@ -82,7 +82,7 @@
 
   <main role="main" class="govuk-o-main-wrapper">
 
-    <p class="govuk-body"><b>Step 10 of 16</b></p>
+    <p class="govuk-body"><b>Step 9 of 17</b></p>
 
     <div class="govuk-o-grid">
       <div class="govuk-o-grid__item govuk-o-grid__item">
@@ -90,6 +90,8 @@
         <h1 class="govuk-heading-xl">
           Select your evidence for submission
         </h1>
+
+        <p class="govuk-body">You will need to select your income, costs and benefits to help us assess your application.</p>
 
         <form class="form" action="/check-evidence" method="post">
 
