--- a/app/views/means-result.html
+++ b/app/views/means-result.html
@@ -16,7 +16,7 @@
 
   <main role="main" class="govuk-o-main-wrapper">
 
-    <p class="govuk-body"><b>Step 15 of 16</b></p>
+    <p class="govuk-body"><b>Step 16 of 17</b></p>
 
     <div class="govuk-o-grid">
       <div class="govuk-o-grid__item govuk-o-grid__item">
@@ -26,7 +26,7 @@
         </h1>
 
         <p class="govuk-body">
-          Based on the information we have, the client is eligible for Legal Aid. We’ll make a final decision after the application has been submitted.
+          Based on the information we have, the client might be eligible for Legal Aid. We’ll make a final decision after the application has been submitted.
         </p>
 
         <h2 class="govuk-heading">
@@ -92,8 +92,8 @@
                 </tr>
                 <tr class="govuk-c-table__row">
                   <td class="govuk-c-table__cell">Shares</td>
-                  <td class="govuk-c-table__cell govuk-c-table__cell--numeric">£0.00</td>
-                  <td class="govuk-c-table__cell"style="text-align:right">N/A</td>
+                  <td class="govuk-c-table__cell govuk-c-table__cell--numeric">£1000.00</td>
+                  <td class="govuk-c-table__cell"style="text-align:right"><a href="">Outstanding</a></td>
                 </tr>
                 <tr class="govuk-c-table__row">
                   <td class="govuk-c-table__cell">Policies</td>
@@ -132,7 +132,7 @@
                 </tr>
                 <tr class="govuk-c-table__row">
                   <th class="govuk-c-table__header" style="border-width:thick;">Total capital</th>
-                  <td class="govuk-c-table__cell govuk-c-table__cell--numeric" style="border-width:thick;">£1,870.00</td>
+                  <td class="govuk-c-table__cell govuk-c-table__cell--numeric" style="border-width:thick;">£2,870.00</td>
                   <td class="govuk-c-table__cell" style="border-width:thick;"></td>
                 </tr>
                 <tr class="govuk-c-table__row">
