--- a/app/views/obbank.html
+++ b/app/views/obbank.html
@@ -173,7 +173,7 @@
 
     <main role="main" class="govuk-o-main-wrapper">
 
-      <p class="govuk-body"><b>Step 4 of 16</b></p>
+      <p class="govuk-body"><b>Step 4 of 17</b></p>
 
       <div class="govuk-o-grid">
         <div class="govuk-o-grid__item govuk-o-grid__item--two-thirds">
@@ -187,7 +187,7 @@
             <div class="govuk-c-radios">
               <fieldset class="govuk-c-fieldset" data-required data-error="Cannot be blank">
                 <legend class="govuk-c-fieldset__legend">
-                  <h4 class="govuk-heading">Please select your banking provider from this list and log in to your online banking:</h4>
+                  <h4 class="govuk-heading">Please select your bank or building society from this list. You will be asked to log in to your account.</h4>
                 </legend>
                 <div class="govuk-c-radios__item">
                   <input class="govuk-c-radios__input" id="bank-1" name="bank" type="radio" value="togetherbank" checked="checked" required>
