--- a/app/views/obconsent.html
+++ b/app/views/obconsent.html
@@ -14,7 +14,7 @@
 
   <main role="main" class="govuk-o-main-wrapper">
 
-    <p class="govuk-body"><b>Step 3 of 16</b></p>
+    <p class="govuk-body"><b>Step 3 of 17</b></p>
 
     <div class="govuk-o-grid">
       <div class="govuk-o-grid__item govuk-o-grid__item--two-thirds">
@@ -36,7 +36,7 @@
 
               <p class="govuk-body">If you give us permission, we can collect this kind of information from your bank and other government departments. We may still need help with other types of information</p>
 
-              <div class="govuk-heading-m"><img src="public/images/padlock.png" alt="padlock" height="42" width="42" style="vertical-align: middle"> Your bank account</div>
+              <div class="govuk-heading-m">Your bank account</div>
 
               <p class="govuk-body"> <b> We'll only connect to your bank or building society for applying for Legal Aid.</b> </p>
 
@@ -50,8 +50,7 @@
               </br>
               <hr>
               </br>
-              <div class="govuk-heading-m"><img src="public/images/padlock.png" alt="padlock" height="42" width="42" style="vertical-align: middle"> Other government services</div>
-              <p class="govuk-body">Some text here.</p>
+              <div class="govuk-heading-m">Income, tax and benefits</div>
 
               <div class="govuk-c-checkboxes__item">
                 <input class="govuk-c-checkboxes__input" id="other-departments" name="other-departments" type="checkbox">
