--- a/app/views/valuables.html
+++ b/app/views/valuables.html
@@ -14,7 +14,7 @@
 
   <main role="main" class="govuk-o-main-wrapper">
 
-    <p class="govuk-body"><b>Step 14 of 16</b></p>
+    <p class="govuk-body"><b>Step 15 of 17</b></p>
 
     <div class="govuk-o-grid">
       <div class="govuk-o-grid__item govuk-o-grid__item--two-thirds">
@@ -54,7 +54,7 @@
           </div>
 
           <input class="govuk-c-button" type="submit" value="Continue">&nbsp;&nbsp;&nbsp;&nbsp;
-          <a class="govuk-c-back-link" href="/capital-assets">Back</a>
+          <a class="govuk-c-back-link" href="/capitalshares">Back</a>
 
         </form>
 
