--- a/app/views/benefits-kind.html
+++ b/app/views/benefits-kind.html
@@ -14,7 +14,7 @@
 
   <main role="main" class="govuk-o-main-wrapper">
 
-    <p class="govuk-body"><b>Step 12 of 16</b></p>
+    <p class="govuk-body"><b>Step 11 of 17</b></p>
 
     <div class="govuk-o-grid">
       <div class="govuk-o-grid__item govuk-o-grid__item--two-thirds">
@@ -30,7 +30,7 @@
         <ul class="govuk-list govuk-list--bullet">
           <li>A company car</li>
           <li>Luncheon vouchers</li>
-          <li>Free health insurance</li>
+          <li>Subsidised health insurance</li>
         </ul>
 
         <form class="form" action="/capital-assets" method="post">
