--- a/app/views/check-evidence.html
+++ b/app/views/check-evidence.html
@@ -14,7 +14,7 @@
 
   <main role="main" class="govuk-o-main-wrapper">
 
-    <p class="govuk-body"><b>Step 11 of 16</b></p>
+    <p class="govuk-body"><b>Step 10 of 17</b></p>
 
     <div class="govuk-o-grid">
       <div class="govuk-o-grid__item govuk-o-grid__item--two-thirds">
@@ -22,6 +22,8 @@
         <h1 class="govuk-heading-xl">
           Check your answers before you submit your evidence
         </h1>
+
+        <p class="govuk-body">Make sure you check your answers carefully. If you submit incorrect information your application might be delayed.</p>
 
         <form class="form" action="/benefits-kind" method="post">
 
