--- a/app/views/obbank.html
+++ b/app/views/obbank.html
@@ -321,9 +321,9 @@
         <br>
         <p>Before you authorise, be aware of the following information</p>
         <ul>
-          <li>The Ministry of Justice will only use this data to support your application for Legal Aid</li>
+          <li>The Legal Aid Agency will only use this data to support your application for Legal Aid</li>
           <li>Your data won't be used for any other purpose</li>
-          <li>Your data will be kept for no longer than 3 months</li>
+          <li>The Legal Aid Agency can access your data for up to 15 days</li>
         </ul>
         <button id="authorise" type="button" onclick="setTimeout(modalCloseAndSubmit, 1000)">Authorise</button>
         <button id="deny" type="button" onclick="setTimeout(modalClose, 1000)">Deny</button>
@@ -336,8 +336,8 @@
         <div align="center"><img src="public/images/padlock.png" alt="padlock" height="42" width="42" style="vertical-align: middle"><b> Select account(s)</b></div>
         <br>
         <h3>Welcome back to Togetherbank</h3><br>
-        <h4>The Ministry of Justice have requested access to your bank accounts</h4>
-        <p>Please select the accounts you want to grant access to. The Ministry of Justice will be able to access</p>
+        <h4>The Legal Aid Agency have requested access to your bank accounts</h4>
+        <p>Please select the accounts you want to grant access to. The Legal Aid Agency will be able to access</p>
         <ul>
           <li>the account's balance</li>
           <li>3 month's worth of transactions</li>
