fix typo on obexpress

--- a/app/views/obexpress.html
+++ b/app/views/obexpress.html
@@ -20,7 +20,7 @@
           <p class="govuk-body"><b>Step 2 of 17</b></p>
 
           <h1 class="govuk-heading-xl">
-            Asssessing your application
+            Assessing your application
           </h1>
 
           <p class="govuk-body">To assess your application for legal aid we need to know:</p>
