Major restructure of code - divide into civil, crime, generic to allow multiple versions of the application

--- a/app/views/civil/start.html
+++ b/app/views/civil/start.html
@@ -27,7 +27,7 @@
           Client Details
         </h1>
 
-        <form class="form" action="/obexpress" method="post">
+        <form class="form" action="/civil/obexpress" method="post">
 
           <div class="govuk-c-radios">
             <fieldset class="govuk-c-fieldset">
