--- a/app/views/generic/capitalshares.html
+++ b/app/views/generic/capitalshares.html
@@ -23,9 +23,9 @@
           Capital and other assets
         </h1>
 
-        <p class="govuk-body">Tell us how much your stocks or shares are worth, you will need to upload copies of your stocks or share certificates later in the application process</p>
+        <p class="govuk-body">Tell us how much your stocks or shares are worth. You will need to upload copies of your stocks or share certificates later in the application process</p>
 
-        <form class="form" action="/valuables" method="post">
+        <form class="form" action="/generic/valuables" method="post">
 
           <div class="govuk-o-form-group"><label class="govuk-c-label" for="national-insurance-number">
             Enter the value of your stocks or shares
@@ -34,7 +34,7 @@
             <input class="govuk-c-input govuk-!-width-two-thirds" id="cap-shares" name="cap-shares" placeholder="0.00" type="number">
           </div>
           <input class="govuk-c-button" type="submit" value="Continue">&nbsp;&nbsp;&nbsp;&nbsp;
-          <a class="govuk-c-back-link" href="/capitalselect">Back</a>
+          <a class="govuk-c-back-link" href="/generic/capitalselect">Back</a>
 
         </form>
       </div>
