--- a/app/views/generic/dwpconf.html
+++ b/app/views/generic/dwpconf.html
@@ -20,8 +20,10 @@
       <div class="govuk-o-grid__item govuk-o-grid__item--two-thirds">
 
         <h1 class="govuk-heading-xl">
-          Is this information correct?
+          Confirm
         </h1>
+
+        <p class="govuk-body">Confirm or change the information you've supplied.</p>
 
         <h2 class="govuk-heading-m">
           Personal details
@@ -71,8 +73,8 @@
           </div>
         </dl>
         </br>
-        <a href="/empstatus" class="govuk-c-button">Continue</a>&nbsp;&nbsp;&nbsp;&nbsp;
-        <a class="govuk-c-back-link" href="/dwpdetails">Back</a>
+        <a href="/generic/empstatus" class="govuk-c-button">Continue</a>&nbsp;&nbsp;&nbsp;&nbsp;
+        <a class="govuk-c-back-link" href="/generic/dwpdetails">Back</a>
 
       </div>
     </div>
