--- a/app/views/generic/means-result.html
+++ b/app/views/generic/means-result.html
@@ -26,7 +26,7 @@
         </h1>
 
         <p class="govuk-body">
-          Based on the information we have, the client might be eligible for Legal Aid. We’ll make a final decision after the application has been submitted.
+          Based on the information we have, the client might be eligible. We’ll make a final decision after the application has been submitted.
         </p>
 
         <h2 class="govuk-heading">
@@ -37,7 +37,7 @@
           Breakdown of provisional result
         </h2></br>
 
-        <form class="form" action="/mandatory-evidence" method="post">
+        <form class="form" action="/generic/end" method="post">
 
           <div>
             <table class="govuk-c-table--two-thirds" style="border-spacing:0">
@@ -265,7 +265,7 @@
           </br>
 
           <input class="govuk-c-button" type="submit" value="Continue">&nbsp;&nbsp;&nbsp;&nbsp;
-          <a class="govuk-c-back-link" href="/valuables">Back</a>
+          <a class="govuk-c-back-link" href="/generic/valuables">Back</a>
 
         </form>
       </div>
