--- a/app/views/civil/bank-success.html
+++ b/app/views/civil/bank-success.html
@@ -66,8 +66,8 @@
           <br>
           <p class="govuk-body">Connect to HMRC and DWP to provide evidence about tax and benefits.</p>
 
-          <a class="govuk-c-button govuk-c-button" href="/dwpdetails" role="button">Continue</a>&nbsp;&nbsp;&nbsp;&nbsp;
-          <a class="govuk-c-back-link" href="/obbank">Back</a>
+          <a class="govuk-c-button govuk-c-button" href="/civil/dwpdetails" role="button">Continue</a>&nbsp;&nbsp;&nbsp;&nbsp;
+          <a class="govuk-c-back-link" href="/civil/obbank">Back</a>
 
         </div>
 
