--- a/app/views/civil/check-evidence.html
+++ b/app/views/civil/check-evidence.html
@@ -25,7 +25,7 @@
 
         <p class="govuk-body">Make sure you check your answers carefully. If you submit incorrect information your application might be delayed.</p>
 
-        <form class="form" action="/benefits-kind" method="post">
+        <form class="form" action="/civil/benefits-kind" method="post">
 
           <div>
             <table class="govuk-c-table">
@@ -115,7 +115,7 @@
           </br>
 
           <input class="govuk-c-button" type="submit" value="Continue">&nbsp;&nbsp;&nbsp;&nbsp;
-          <a class="govuk-c-back-link" href="/identify-evidence">Back</a>
+          <a class="govuk-c-back-link" href="/civil/identify-evidence">Back</a>
 
         </form>
       </div>
