--- a/app/views/civil/empstatus.html
+++ b/app/views/civil/empstatus.html
@@ -22,8 +22,7 @@
         <h2 class="govuk-heading-xl">
           Employment details
         </h2>
-        <form class="form" action="./identify-evidence" method="get">
-
+        <form class="form" action="/civil/identify-evidence" method="get">
 
           <div class="govuk-c-radios">
             <fieldset class="govuk-c-fieldset">
@@ -85,7 +84,7 @@
             </fieldset>
           </div>
           <input class="govuk-c-button" type="submit" value="Continue">&nbsp;&nbsp;&nbsp;&nbsp;
-          <a class="govuk-c-back-link" href="./dwpconf">Back</a>
+          <a class="govuk-c-back-link" href="/civil/dwpconf">Back</a>
         </form>
       </div>
     </div>
