--- a/app/views/civil/identify-evidence.html
+++ b/app/views/civil/identify-evidence.html
@@ -93,7 +93,7 @@
 
         <p class="govuk-body">You will need to select your income, costs and benefits to help us assess your application.</p>
 
-        <form class="form" action="/check-evidence" method="post">
+        <form class="form" action="/civil/check-evidence" method="post">
 
           <div>
             <table class="govuk-c-table" style="table-layout:fixed;">
@@ -793,7 +793,7 @@
           </div>
 
           <input class="govuk-c-button" type="submit" value="Continue">&nbsp;&nbsp;&nbsp;&nbsp;
-          <a class="govuk-c-back-link" href="/empstatus">Back</a>
+          <a class="govuk-c-back-link" href="/civil/empstatus">Back</a>
 
         </form>
       </div>
