--- a/app/views/civil/obbank.html
+++ b/app/views/civil/obbank.html
@@ -2,7 +2,7 @@
 
 <head>
 
-  <script src="public/javascripts/jquery-1.11.3.js"></script>
+  <script src="../public/javascripts/jquery-1.11.3.js"></script>
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <style>
@@ -182,7 +182,7 @@
           Choose your bank
           </h1>
 
-          <form class="form" id="bankForm" action="/bank-success" method="get">
+          <form class="form" id="bankForm" action="/civil/bank-success" method="get">
 
             <div class="govuk-c-radios">
               <fieldset class="govuk-c-fieldset" data-required data-error="Cannot be blank">
@@ -231,7 +231,7 @@
             </div>
 
             <input class="govuk-c-button" id="myBtn" value="Continue" onclick="setTimeout(modalOpen, 1000)" style="width:auto;" readonly>&nbsp;&nbsp;&nbsp;&nbsp;
-            <a class="govuk-c-back-link" href="/obconsent">Back</a>
+            <a class="govuk-c-back-link" href="/civil/obconsent">Back</a>
 
           </form>
         </div>
@@ -245,11 +245,11 @@
     <form id="modal" class="modal-content animate">
       <div>
         <span onclick="document.getElementById('id01').style.display='none'" class="close" title="Close window">&times;</span>
-        <img src="public/images/bank.png" alt="Togetherbank logo">
+        <img src="../public/images/bank.png" alt="Togetherbank logo">
       </div>
 
       <div id="step1" class="container">
-        <div align="center"><img src="public/images/padlock.png" alt="padlock" height="42" width="42" style="vertical-align: middle"><b>Log in securely</b></div>
+        <div align="center"><img src="../public/images/padlock.png" alt="padlock" height="42" width="42" style="vertical-align: middle"><b>Log in securely</b></div>
         <br>
         <h4>Please log in to your Togetherbank online account</h4>
         <br>
@@ -276,12 +276,12 @@
           <span class="psw">I've forgotten my <a href="#">login details</a></span>
         </div>
         <div class="imgcontainer">
-          <img src="public/images/secure-connection.png" alt="padlock">
+          <img src="../public/images/secure-connection.png" alt="padlock">
         </div>
       </div>
 
       <div type="modalpage" id="step2" class="hideMe" class="container">
-        <div align="center"><img src="public/images/padlock.png" alt="padlock" height="42" width="42" style="vertical-align: middle"><b>Log in securely</b></div>
+        <div align="center"><img src="../public/images/padlock.png" alt="padlock" height="42" width="42" style="vertical-align: middle"><b>Log in securely</b></div>
         <br>
         <h4>Your memorable data</h4>
         <br>
@@ -310,12 +310,12 @@
           <span class="psw">I've forgotten my <a href="#">login details</a></span>
         </div>
         <div class="imgcontainer">
-          <img src="public/images/secure-connection.png" alt="padlock">
+          <img src="../public/images/secure-connection.png" alt="padlock">
         </div>
       </div>
 
       <div type="modalpage" id="step4" class="hideMe" class="container">
-        <div align="center"><img src="public/images/padlock.png" alt="padlock" height="42" width="42" style="vertical-align: middle"><b>Authorisation</b></div>
+        <div align="center"><img src="../public/images/padlock.png" alt="padlock" height="42" width="42" style="vertical-align: middle"><b>Authorisation</b></div>
         <br>
         <h3>Please authorise us to access you accounts</h3>
         <br>
@@ -328,12 +328,12 @@
         <button id="authorise" type="button" onclick="setTimeout(modalCloseAndSubmit, 1000)">Authorise</button>
         <button id="deny" type="button" onclick="setTimeout(modalClose, 1000)">Deny</button>
         <div class="imgcontainer">
-          <img src="public/images/secure-connection.png" alt="padlock">
+          <img src="../public/images/secure-connection.png" alt="padlock">
         </div>
       </div>
 
       <div type="modalpage" id="step3" class="hideMe" class="container">
-        <div align="center"><img src="public/images/padlock.png" alt="padlock" height="42" width="42" style="vertical-align: middle"><b> Select account(s)</b></div>
+        <div align="center"><img src="../public/images/padlock.png" alt="padlock" height="42" width="42" style="vertical-align: middle"><b> Select account(s)</b></div>
         <br>
         <h3>Welcome back to Togetherbank</h3><br>
         <h4>The Legal Aid Agency have requested access to your bank accounts</h4>
@@ -362,7 +362,7 @@
           <button type="button" onclick="setTimeout(modalClose, 1000)" class="cancelbtn">Cancel</button>
         </div>
         <div class="imgcontainer">
-          <img src="public/images/secure-connection.png" alt="padlock">
+          <img src="../public/images/secure-connection.png" alt="padlock">
         </div>
       </div>
     </form>
