--- a/app/views/civil/obconsent.html
+++ b/app/views/civil/obconsent.html
@@ -19,7 +19,7 @@
     <div class="govuk-o-grid">
       <div class="govuk-o-grid__item govuk-o-grid__item--two-thirds">
 
-        <form class="form" action="/obbank" method="post">
+        <form class="form" action="/civil/obbank" method="post">
 
           <div class="govuk-c-checkboxes">
             <fieldset class="govuk-c-fieldset">
@@ -58,17 +58,17 @@
                   The Legal Aid Agency can access the following information from:
                 </label>
                 <p>
-                <ul class="govuk-list govuk-list--bullet">
-                  <li>HMRC - income and tax</li>
-                  <li>DWP - if you are getting any benefits</li>
-                </ul>
+                  <ul class="govuk-list govuk-list--bullet">
+                    <li>HMRC - income and tax</li>
+                    <li>DWP - if you are getting any benefits</li>
+                  </ul>
                 </p>
               </div>
             </fieldset>
           </div>
 
           <input class="govuk-c-button" type="submit" value="Continue">&nbsp;&nbsp;&nbsp;&nbsp;
-          <a class="govuk-c-back-link" href="/obexpress">Back</a>
+          <a class="govuk-c-back-link" href="/civil/obexpress">Back</a>
 
         </form>
 
