--- a/app/views/civil/obexpress.html
+++ b/app/views/civil/obexpress.html
@@ -65,8 +65,8 @@
 
       </div>
 
-      <a class="govuk-c-button govuk-c-button" href="/obconsent" role="button">Continue</a> &nbsp;&nbsp;&nbsp;&nbsp;
-      <a class=" govuk-c-back-link " href="/civil-start ">Back</a>
+      <a class="govuk-c-button govuk-c-button" href="/civil/obconsent" role="button">Continue</a> &nbsp;&nbsp;&nbsp;&nbsp;
+      <a class=" govuk-c-back-link " href="/civil/start ">Back</a>
 
     </div>
 </div>
