--- a/app/views/crime/start.html
+++ b/app/views/crime/start.html
@@ -24,7 +24,7 @@
       <div class="govuk-o-grid__item govuk-o-grid__item--two-thirds">
 
         <h2 class="govuk-heading-xl">
-          This is the first page of a generic process to allow the Ministry of Justice to carry out a means test.
+          This is the last page of the Interest of Justice section of the crime eForm.
         </h2>
 
         <p class="govuk-body">It needs to be customised to look like that page.</p>
