--- a/app/views/generic/benefits-kind.html
+++ b/app/views/generic/benefits-kind.html
@@ -33,7 +33,7 @@
           <li>Subsidised health insurance</li>
         </ul>
 
-        <form class="form" action="/capital-assets" method="post">
+        <form class="form" action="/generic/capital-assets" method="post">
 
           <div class="govuk-c-radios">
             <fieldset class="govuk-c-fieldset">
@@ -53,7 +53,7 @@
           </div>
 
           <input class="govuk-c-button" type="submit" value="Continue">&nbsp;&nbsp;&nbsp;&nbsp;
-          <a class="govuk-c-back-link" href="/check-evidence">Back</a>
+          <a class="govuk-c-back-link" href="/generic/check-evidence">Back</a>
 
         </form>
       </div>
