--- a/app/views/generic/dwpdetails.html
+++ b/app/views/generic/dwpdetails.html
@@ -21,12 +21,10 @@
       <div class="govuk-o-grid__item govuk-o-grid__item--two-thirds">
 
         <h1 class="govuk-heading-xl">
-          Enter your National Insurance number and date of birth
+          Enter your details
         </h1>
 
-        <p class="govuk-body">We need this information to identify you to other government departments.</p>
-
-        <form class="form" action="/dwpconf" method="post">
+        <form class="form" action="/generic/dwpconf" method="post">
 
           <label class="govuk-c-label" for="national-insurance-number">
             National Insurance Number
@@ -65,7 +63,7 @@
           </fieldset>
 
           <input class="govuk-c-button" type="submit" value="Continue">&nbsp;&nbsp;&nbsp;&nbsp;
-          <a class="govuk-c-back-link" href="/bank-success">Back</a>
+          <a class="govuk-c-back-link" href="/generic/bank-success">Back</a>
 
         </form>
 
