--- a/app/views/generic/end.html
+++ b/app/views/generic/end.html
@@ -20,20 +20,17 @@
       <div class="govuk-o-grid__item govuk-o-grid__item--two-thirds">
 
         <h1 class="govuk-heading-xl">
-          Mandatory evidence
+          Header
         </h1>
 
-        <p class="govuk-body">The next screen will list the evidence that will be required by the LAA based on the answers you have provided to the questions asked in the means interview. This evidence is mandatory to enable submission of this application. Please check off
-          each required item.</p>
-        <p class="govuk-body">You will note that on completion of the means interview that the Document Upload link will be available to you. You may either upload all requested items for sending with this application or alternatively you may wait and send these items following
-          the receipt of a Document/Evidence Request task that you will receive following submission.</p>
+        <p class="govuk-body">Text</p>
 
         <div class="govuk-c-checkboxes__item">
           <input class="govuk-c-checkboxes__input" id="confirm" name="confirm" type="checkbox" required>
           <label class="govuk-c-label govuk-c-checkboxes__label" for="confirm">Please confirm that you have read and understood the above by ticking this box</label>
         </div>
 
-        <a class="govuk-c-back-link" href="/means-result">Back</a>
+        <a class="govuk-c-back-link" href="/generic/means-result">Back</a>
 
       </div>
     </div>
