--- a/app/views/generic/valuables.html
+++ b/app/views/generic/valuables.html
@@ -14,31 +14,39 @@
 
   <main role="main" class="govuk-o-main-wrapper">
 
-    <p class="govuk-body"><b>Step 12 of 17</b></p>
+    <p class="govuk-body"><b>Step 15 of 17</b></p>
 
     <div class="govuk-o-grid">
       <div class="govuk-o-grid__item govuk-o-grid__item--two-thirds">
 
         <h1 class="govuk-heading-xl">
-          Capital and other assets
+          Valuable items
         </h1>
 
-        <p class="govuk-body">Do you have any other bank, savings accounts or access to funds? </p>
+        <p class="govuk-body">Do you own anything valuable (worth £500 or more) like:</p>
 
+        <ul class="govuk-list govuk-list--bullet">
+          <li>jewellery</li>
+          <li>antiques</li>
+          <li>paintings</li>
+          <li>collectable items</li>
+          <li>horses</li>
+          <li>boats</li>
+        </ul>
 
-        <form class="form" action="/capitalselect" method="post">
+        <form class="form" action="/generic/means-result" method="post">
 
           <div class="govuk-c-radios">
-            <fieldset class="govuk-c-fieldset">
+            <fieldset class="govuk-c-fieldset" data-required data-error="Cannot be blank">
               <div class="govuk-c-radios__item">
-                <input class="govuk-c-radios__input" id="cap-assets-1" name="cap-assets" type="radio" value="yes" required>
-                <label class="govuk-c-label govuk-c-radios__label" for="cap-assets-2">
+                <input class="govuk-c-radios__input" id="valuables-1" name="valuables" type="radio" value="yes" required>
+                <label class="govuk-c-label govuk-c-radios__label" for="valuables-1">
                 Yes
               </label>
               </div>
               <div class="govuk-c-radios__item">
-                <input class="govuk-c-radios__input" id="cap-assets-2" name="cap-assets" type="radio" value="no">
-                <label class="govuk-c-label govuk-c-radios__label" for="cap-assets-2">
+                <input class="govuk-c-radios__input" id="valuables-2" name="valuables" type="radio" value="no">
+                <label class="govuk-c-label govuk-c-radios__label" for="valuables-2">
                 No
               </label>
               </div>
@@ -46,7 +54,7 @@
           </div>
 
           <input class="govuk-c-button" type="submit" value="Continue">&nbsp;&nbsp;&nbsp;&nbsp;
-          <a class="govuk-c-back-link" href="/benefits-kind">Back</a>
+          <a class="govuk-c-back-link" href="/generic/capitalshares">Back</a>
 
         </form>
 
