Minor cosmetic changes

--- a/app/views/civil/benefits-kind.html
+++ b/app/views/civil/benefits-kind.html
@@ -28,9 +28,9 @@
         </p>
 
         <ul class="govuk-list govuk-list--bullet">
-          <li>A company car</li>
-          <li>Luncheon vouchers</li>
-          <li>Subsidised health insurance</li>
+          <li>a company car</li>
+          <li>luncheon vouchers</li>
+          <li>subsidised health insurance</li>
         </ul>
 
         <form class="form" action="/civil/capital-assets" method="post">
