--- a/app/views/civil/obexpress.html
+++ b/app/views/civil/obexpress.html
@@ -26,9 +26,9 @@
           <p class="govuk-body">To assess your application for legal aid we need to know:</p>
 
           <ul class="govuk-list govuk-list--bullet">
-            <li>How much you earn</li>
-            <li>How much you spend</li>
-            <li>If you are getting any benefits - like housing benefit or universal credit</li>
+            <li>how much you earn</li>
+            <li>how much you spend</li>
+            <li>if you are getting any benefits - like housing benefit or universal credit</li>
           </ul>
 
           <p class="govuk-body">We will use any evidence you provide to support your application for legal aid</p>
@@ -58,7 +58,7 @@
                 <li>Bank savings</li>
                 <li>Bank or building society account balance</li>
                 <li>ISA held at your bank</li>
-              </ul>.
+              </ul>
             </div>
           </details>
         </div>
