Josh's changes to generic process

--- a/app/views/generic/bank-success.html
+++ b/app/views/generic/bank-success.html
@@ -18,17 +18,17 @@
 
   <main role="main" class="govuk-o-main-wrapper">
 
-    <p class="govuk-body"><b>Step 5 of 17</b></p>
+    <p class="govuk-body"><b>Step 4 of 15</b></p>
 
     <div class="govuk-o-grid">
       <div class="govuk-o-grid__item govuk-o-grid__item--two-thirds">
 
         <h2 class="govuk-heading-xl">
-          We connected to your bank or building society
+          You have succesfully shared your account information
         </h2>
 
         <h2 class="govuk-heading-m">
-          Account information
+          Your account(s)
         </h2>
 
         <div>
