--- a/app/views/generic/capital-assets.html
+++ b/app/views/generic/capital-assets.html
@@ -14,17 +14,14 @@
 
   <main role="main" class="govuk-o-main-wrapper">
 
-    <p class="govuk-body"><b>Step 12 of 17</b></p>
+    <p class="govuk-body"><b>Step 11 of 15</b></p>
 
     <div class="govuk-o-grid">
       <div class="govuk-o-grid__item govuk-o-grid__item--two-thirds">
 
         <h1 class="govuk-heading-xl">
-          Capital and other assets
+          Do you have any other savings or investments?
         </h1>
-
-        <p class="govuk-body">Do you have any other bank, savings accounts or access to funds? </p>
-
 
         <form class="form" action="/generic/capitalselect" method="post">
 
