--- a/app/views/generic/capitalshares.html
+++ b/app/views/generic/capitalshares.html
@@ -14,16 +14,16 @@
 
   <main role="main" class="govuk-o-main-wrapper">
 
-    <p class="govuk-body"><b>Step 14 of 17</b></p>
+    <p class="govuk-body"><b>Step 13 of 15</b></p>
 
     <div class="govuk-o-grid">
       <div class="govuk-o-grid__item govuk-o-grid__item--two-thirds">
 
         <h1 class="govuk-heading-xl">
-          Capital and other assets
+          How much are your stocks or shares worth?
         </h1>
 
-        <p class="govuk-body">Tell us how much your stocks or shares are worth. You will need to upload copies of your stocks or share certificates later in the application process</p>
+        <p class="govuk-body">You will need to upload copies of your stocks or share certificates later in your application.</p>
 
         <form class="form" action="/generic/valuables" method="post">
 
