--- a/app/views/generic/dwpconf.html
+++ b/app/views/generic/dwpconf.html
@@ -14,19 +14,19 @@
 
   <main role="main" class="govuk-o-main-wrapper">
 
-    <p class="govuk-body"><b>Step 7 of 17</b></p>
+    <p class="govuk-body"><b>Step 6 of 15</b></p>
 
     <div class="govuk-o-grid">
       <div class="govuk-o-grid__item govuk-o-grid__item--two-thirds">
 
         <h1 class="govuk-heading-xl">
-          Confirm
+          Are your details correct?
         </h1>
 
-        <p class="govuk-body">Confirm or change the information you've supplied.</p>
+        <p class="govuk-body">Check the information you have given us or make changes if it is not correct.</p>
 
         <h2 class="govuk-heading-m">
-          Personal details
+          Your details
         </h2>
 
         <dl class="govuk-check-your-answers cya-questions-short">
