--- a/app/views/generic/start.html
+++ b/app/views/generic/start.html
@@ -18,18 +18,28 @@
 
   <main role="main" class="govuk-o-main-wrapper">
 
-    <p class="govuk-body"><b>Step 1 of 17</b></p>
+    <p class="govuk-body"><b>Step 1 of 15</b></p>
 
     <div class="govuk-o-grid">
       <div class="govuk-o-grid__item govuk-o-grid__item--two-thirds">
 
         <h2 class="govuk-heading-xl">
-          Complete a financial assessment to see how much you need to pay
+          Apply to get financial help
         </h2>
 
-        <p class="govuk-body">It needs to be customised to look like that page.</p>
+        <p class="govuk-body">You might not have to pay anything if you are on certain benefits, a low income or have little or no savings.</p>
 
-        <a class="govuk-c-button govuk-c-button--start govuk-!-mt-r2 govuk-!-mb-r8" href="/generic/obexpress" role="button">Continue</a>
+        <h3>Find out quickly if you can get help</h3>
+        <p></p>
+
+        <p class="govuk-body">You can provide details about your financial situation for the last 3 months by:</p>
+
+        <ul class="govuk-list govuk-list--bullet">
+                <li>sharing information from your online banking</li>
+                <li>giving your National Insurance number and date of birth so we can check your tax status and whether you receive benefits</li>
+              </ul>
+
+        <a class="govuk-c-button govuk-c-button--start govuk-!-mt-r2 govuk-!-mb-r8" href="/generic/obconsent" role="button">Continue</a>
 
       </div>
 
