--- a/app/views/generic/benefits-kind.html
+++ b/app/views/generic/benefits-kind.html
@@ -14,24 +14,18 @@
 
   <main role="main" class="govuk-o-main-wrapper">
 
-    <p class="govuk-body"><b>Step 11 of 17</b></p>
+    <p class="govuk-body"><b>Step 10 of 15</b></p>
 
     <div class="govuk-o-grid">
       <div class="govuk-o-grid__item govuk-o-grid__item--two-thirds">
 
         <h1 class="govuk-heading-xl">
-          Benefits in kind
+          Do you get any benefits from work that are not money?
         </h1>
 
         <p class="govuk-body">
-          Do you get benefits from work that are not money? This might include:
+          Benefits in kind include a company car, luncheon vouchers or health insurance.
         </p>
-
-        <ul class="govuk-list govuk-list--bullet">
-          <li>A company car</li>
-          <li>Luncheon vouchers</li>
-          <li>Subsidised health insurance</li>
-        </ul>
 
         <form class="form" action="/generic/capital-assets" method="post">
 
