--- a/app/views/generic/capitalselect.html
+++ b/app/views/generic/capitalselect.html
@@ -14,7 +14,7 @@
 
   <main role="main" class="govuk-o-main-wrapper">
 
-    <p class="govuk-body"><b>Step 13 of 17</b></p>
+    <p class="govuk-body"><b>Step 12 of 15</b></p>
 
     <div class="govuk-o-grid">
       <div class="govuk-o-grid__item govuk-o-grid__item--two-thirds">
@@ -25,19 +25,19 @@
             <div class="govuk-o-form-group">
               <fieldset class="govuk-c-fieldset">
                 <legend class="govuk-c-fieldset__legend">
-                  <h1 class="govuk-heading-xl">Capital and other assets</h1>
-                  <span class="govuk-c-fieldset__hint">Do you or your partner have any of the following:</span>
+                  <h1 class="govuk-heading-xl">What type of savings or investments do you have?</h1>
+                  <p hidden>Remember to include any shares, assets or savings held by your partner.</p>
                 </legend>
                 <div class="govuk-c-checkboxes__item">
                   <input class="govuk-c-checkboxes__input" id="nationality-1" name="nationality" type="checkbox" value="british">
                   <label class="govuk-c-label govuk-c-checkboxes__label" for="nationality-1">
-                  National savings certificates
+                  National Savings Certificates
                 </label>
                 </div>
                 <div class="govuk-c-checkboxes__item">
                   <input class="govuk-c-checkboxes__input" id="nationality-2" name="nationality" type="checkbox" value="irish">
                   <label class="govuk-c-label govuk-c-checkboxes__label" for="nationality-2">
-                  Premium bonds
+                  Premium Bonds
                 </label>
                 </div>
                 <div class="govuk-c-checkboxes__item">
