--- a/app/views/generic/dwpdetails.html
+++ b/app/views/generic/dwpdetails.html
@@ -14,20 +14,20 @@
 
   <main role="main" class="govuk-o-main-wrapper">
 
-    <p class="govuk-body"><b>Step 6 of 17</b></p>
+    <p class="govuk-body"><b>Step 5 of 15</b></p>
 
     <div class="govuk-o-grid">
 
       <div class="govuk-o-grid__item govuk-o-grid__item--two-thirds">
 
         <h1 class="govuk-heading-xl">
-          Enter your details
+          Check your tax and benefits status
         </h1>
 
         <form class="form" action="/generic/dwpconf" method="post">
 
           <label class="govuk-c-label" for="national-insurance-number">
-            National Insurance Number
+            Enter your National Insurance number
             <span class="govuk-c-label__hint govuk-!-width-two-thirds">
               It’s on your National Insurance card, benefit letter, payslip or P60. For example, ‘QQ 12 34 56 C’.
             </span>
@@ -37,7 +37,7 @@
           <fieldset class="govuk-c-fieldset">
             <legend class="govuk-c-fieldset__legend">
               <label class="govuk-c-label" for="full-name">
-                Date of Birth
+                Enter your date of birth
               </label>
             </legend>
             <div class="govuk-c-date-input" id="dob">
