--- a/app/views/generic/empstatus.html
+++ b/app/views/generic/empstatus.html
@@ -14,14 +14,17 @@
 
   <main role="main" class="govuk-o-main-wrapper">
 
-    <p class="govuk-body"><b>Step 8 of 17</b></p>
+    <p class="govuk-body"><b>Step 7 of 15</b></p>
 
     <div class="govuk-o-grid">
       <div class="govuk-o-grid__item govuk-o-grid__item--two-thirds">
 
         <h2 class="govuk-heading-xl">
-          Employment details
+          Tell us about your employment status
         </h2>
+
+        <p class="govuk-body">This helps to identify information you need to give us to support your application.</p>
+
         <form class="form" action="/generic/identify-evidence" method="get">
 
 
@@ -29,6 +32,9 @@
             <fieldset class="govuk-c-fieldset">
               <legend class="govuk-c-fieldset__legend">
                 <h1 class="govuk-heading-m">Are you employed?</h1>
+                <span class="govuk-c-label__hint govuk-!-width-two-thirds">
+                If you are employed, you will need to give information about your wages.
+                </span>
               </legend>
               <div class="govuk-c-radios__item">
                 <input class="govuk-c-radios__input" id="employed-1" name="employed" type="radio" value="yes" required>
@@ -49,6 +55,9 @@
             <fieldset class="govuk-c-fieldset">
               <legend class="govuk-c-fieldset__legend">
                 <h1 class="govuk-heading-m">Do you get any benefits?</h1>
+                <span class="govuk-c-label__hint govuk-!-width-two-thirds">
+                If you are on benefits, you will need to give information about how much you receive.
+                </span>
               </legend>
               <div class="govuk-c-radios__item">
                 <input class="govuk-c-radios__input" id="benefits-1" name="benefits" type="radio" value="yes" required>
@@ -69,6 +78,9 @@
             <fieldset class="govuk-c-fieldset">
               <legend class="govuk-c-fieldset__legend">
                 <h1 class="govuk-heading-m">Have you been paid redundancy in the last month?</h1>
+                <span class="govuk-c-label__hint govuk-!-width-two-thirds">
+                If you have been made redundant, you will need to give details of your redundancy payment.
+                </span>
               </legend>
               <div class="govuk-c-radios__item">
                 <input class="govuk-c-radios__input" id="redundancy-1" name="redundancy" type="radio" value="yes" required>
