--- a/app/views/generic/identify-evidence.html
+++ b/app/views/generic/identify-evidence.html
@@ -82,22 +82,32 @@
 
   <main role="main" class="govuk-o-main-wrapper">
 
-    <p class="govuk-body"><b>Step 9 of 17</b></p>
+    <p class="govuk-body"><b>Step 8 of 15</b></p>
 
     <div class="govuk-o-grid">
       <div class="govuk-o-grid__item govuk-o-grid__item">
 
         <h1 class="govuk-heading-xl">
-          Select your evidence for submission
+          Select transactions to support your application
         </h1>
+         <p class="govuk-body">We need to know about regular incoming payments (such as wages, benefits or pension) and major outgoings (such as childcare, mortgage, rent or housing costs).</p>
 
-        <p class="govuk-body">You will need to select your income, costs and benefits to help us assess your application.</p>
+        <p class="govuk-body">We do not need to know about smaller, everday purchases.</p>
+        <h3>How to choose your transactions</h3>
+
+        <ol>
+          <li>Check the box next to the item on your bank statement</li>
+          <li>Select the type of transaction (e.g. salary or childcare)</li>
+          <li>Select how often you receive or pay out money (e.g. weekly or monthly)</li>
+          <li>Choose all relevant items and click 'Continue'</li>
+        </ol>
 
         <form class="form" action="/generic/check-evidence" method="post">
 
           <div>
             <table class="govuk-c-table" style="table-layout:fixed;">
-              <caption class="govuk-c-table__caption">Your bank account<br>Account Number: 123456789</caption>
+              <h2 class="govuk-heading-m">Your account</h2>
+              <caption class="govuk-c-table__caption">Account Number: 123456789</caption>
               <thead class="govuk-c-table__head">
                 <tr class="govuk-c-table__row">
                   <th class="govuk-c-table__header" scope="col" width="150">Date</th>
