--- a/app/views/generic/means-result.html
+++ b/app/views/generic/means-result.html
@@ -16,22 +16,23 @@
 
   <main role="main" class="govuk-o-main-wrapper">
 
-    <p class="govuk-body"><b>Step 16 of 17</b></p>
+    <p class="govuk-body"><b>Step 15 of 15</b></p>
 
     <div class="govuk-o-grid">
       <div class="govuk-o-grid__item govuk-o-grid__item">
 
         <h1 class="govuk-heading-xl">
-          Means assessment result
+          Your provisional result
         </h1>
 
+        <h2 class="govuk-heading">
+          You should be eligible for financial help
+        </h2></br>
         <p class="govuk-body">
-          Based on the information we have, the client might be eligible. We’ll make a final decision after the application has been submitted.
+          We will complete final checks on any pending or outstanding items when you submit your application. We will work out whether you need to pay anything and let you know the result.
         </p>
 
-        <h2 class="govuk-heading">
-          Provisional result: In scope
-        </h2></br>
+        </br>
 
         <h3 class="govuk-heading">
           Breakdown of provisional result
