--- a/app/views/generic/obbank.html
+++ b/app/views/generic/obbank.html
@@ -173,13 +173,13 @@
 
     <main role="main" class="govuk-o-main-wrapper">
 
-      <p class="govuk-body"><b>Step 4 of 17</b></p>
+      <p class="govuk-body"><b>Step 3 of 15</b></p>
 
       <div class="govuk-o-grid">
         <div class="govuk-o-grid__item govuk-o-grid__item--two-thirds">
 
           <h1 class="govuk-heading-xl">
-          Choose your bank
+          Log in to your online banking
           </h1>
 
           <form class="form" id="bankForm" action="/generic/bank-success" method="get">
@@ -187,7 +187,7 @@
             <div class="govuk-c-radios">
               <fieldset class="govuk-c-fieldset" data-required data-error="Cannot be blank">
                 <legend class="govuk-c-fieldset__legend">
-                  <p class="govuk-heading">Please select your bank or building society from this list. You will be asked to log in to your account.</p>
+                  <p class="govuk-heading">Choose the bank where you have your main current account. Make sure you keep your log in and password details private.</p>
                 </legend>
                 <div class="govuk-c-radios__item">
                   <input class="govuk-c-radios__input" id="bank-1" name="bank" type="radio" value="togetherbank" checked="checked" required>
@@ -213,7 +213,7 @@
             <div class="govuk-c-radios">
               <fieldset class="govuk-c-fieldset" data-required data-error="Cannot be blank">
                 <legend class="govuk-c-fieldset__legend">
-                  <p class="govuk-heading">Do you have another bank account?</p>
+                  <p class="govuk-heading">Do you have an account or ISA with a different bank or building society?</p>
                 </legend>
                 <div class="govuk-c-radios__item">
                   <input class="govuk-c-radios__input" id="other-bank-1" name="other-bank" type="radio" value="yes" required>
@@ -312,8 +312,12 @@
       <div type="modalpage" id="step4" class="hideMe" class="container">
         <div align="center"><img src="../public/images/padlock.png" alt="padlock" height="42" width="42" style="vertical-align: middle"><b>Authorisation</b></div>
         <br>
-        <p>The benefits assessor can only access your accounts for this application.
-        </p>
+        <h4>I agree to share details for:</h4>
+        <ul>
+          <li>my account balance</li>
+          <li>3 months' transactions</li>
+          <li>any direct debits or standing orders</li>
+        </ul>
         <button id="authorise" type="button" onclick="setTimeout(modalCloseAndSubmit, 1000)">Authorise</button>
         <button id="deny" type="button" onclick="setTimeout(modalClose, 1000)">Deny</button>
         <div class="imgcontainer">
@@ -322,16 +326,9 @@
       </div>
 
       <div type="modalpage" id="step3" class="hideMe" class="container">
-        <div align="center"><img src="../public/images/padlock.png" alt="padlock" height="42" width="42" style="vertical-align: middle"><b> Select account(s)</b></div>
+        <div align="center"><img src="../public/images/padlock.png" alt="padlock" height="42" width="42" style="vertical-align: middle"><b>Select account(s)</b></div>
 
-        <h4>The benefits assessor has requested access to your bank accounts</h4>
-        <p>They will be able to access:</p>
-        <ul>
-          <li>your account balance</li>
-          <li>3 months' transactions</li>
-          <li>any direct debits or standing orders</li>
-        </ul>
-        <p>Please select the accounts you want the assessor to access. </p>
+        <p>Select the account(s) you want to share:</p>
         <form action="">
           <div class="inline-field">
             <input type="checkbox" name="account1" value="Current"><label for="account1"><b>Togetherbank Current Account</b><br>Account Number: 123456789</label>
