--- a/app/views/generic/obconsent.html
+++ b/app/views/generic/obconsent.html
@@ -14,7 +14,7 @@
 
   <main role="main" class="govuk-o-main-wrapper">
 
-    <p class="govuk-body"><b>Step 3 of 17</b></p>
+    <p class="govuk-body"><b>Step 2 of 15</b></p>
 
     <div class="govuk-o-grid">
       <div class="govuk-o-grid__item govuk-o-grid__item--two-thirds">
@@ -24,45 +24,29 @@
           <div class="govuk-c-checkboxes">
             <fieldset class="govuk-c-fieldset">
               <legend class="govuk-c-fieldset__legend">
-                <h1 class="govuk-heading-xl">Can we collect this information for you?</h1>
+                <h1 class="govuk-heading-xl">Are you happy to share your details with us?</h1>
               </legend>
 
-              <p class="govuk-body">To be able to collect your financial information we need access to:</p>
+              <p class="govuk-body">We use the information to check how much you earn, how much you spend on things like childcare and whether you receive benefits.</p>
 
-              <ul class="govuk-list govuk-list--bullet">
-                <li>your bank or building society account</li>
-                <li>your tax information</li>
-              </ul>
+               <p class="govuk-body">You decide what information you want to give. We only use the details to support your application. We do not use it for anything else.</p>
 
-              <p class="govuk-body">If you give us permission, we can collect this kind of information from your bank and other government departments. We may still need help with other types of information.</p>
-
-              <div class="panel panel-border-wide">
-                <p>We'll only connect to your bank or building society for this application.</p>
-              </div>
-
-              <div class="govuk-heading-m">Your bank account</div>
+              <div class="govuk-heading-m">I am happy to share information from my online banking</div>
 
               <div class="govuk-c-checkboxes__item">
                 <input class="govuk-c-checkboxes__input" id="open-banking" name="open-banking" type="checkbox">
-
-                <label class="govuk-c-label govuk-c-checkboxes__label" for="open-banking">
-                  We can access your bank or building society account
-                </label>
               </div>
               </br>
-              <div class="govuk-heading-m">Income, tax and benefits</div>
+              <div class="govuk-heading-m">I am happy for you to check my tax and benefit status</div>
 
               <div class="govuk-c-checkboxes__item">
                 <input class="govuk-c-checkboxes__input" id="other-departments" name="other-departments" type="checkbox">
-                <label class="govuk-c-label govuk-c-checkboxes__label" for="other-departments">
-                  We can access your tax information and benefit status
-                </label>
               </div>
             </fieldset>
           </div>
 
           <input class="govuk-c-button" type="submit" value="Continue">&nbsp;&nbsp;&nbsp;&nbsp;
-          <a class="govuk-c-back-link" href="/generic/obexpress">Back</a>
+          <a class="govuk-c-back-link" href="/generic/start">Back</a>
 
         </form>
 
