Minor copy amend
Capitalise i for NI number

--- a/app/views/generic/dwpconf.html
+++ b/app/views/generic/dwpconf.html
@@ -46,7 +46,7 @@
 
           <div>
             <dt class="cya-question">
-              National insurance number
+              National Insurance number
             </dt>
             <dd class="cya-answer">
               HJ000000D
