Minor copy amend
Made pension plural

--- a/app/views/generic/identify-evidence.html
+++ b/app/views/generic/identify-evidence.html
@@ -90,7 +90,7 @@
         <h1 class="govuk-heading-xl">
           Select transactions to support your application
         </h1>
-         <p class="govuk-body">We need to know about regular incoming payments (such as wages, benefits or pension) and major outgoings (such as childcare, mortgage, rent or housing costs).</p>
+         <p class="govuk-body">We need to know about regular incoming payments (such as wages, benefits or pensions) and major outgoings (such as childcare, mortgage, rent or housing costs).</p>
 
         <p class="govuk-body">We do not need to know about smaller, everday purchases.</p>
         <h3>How to choose your transactions</h3>
