--- a/app/views/crime/bank-success.html
+++ b/app/views/crime/bank-success.html
@@ -65,7 +65,7 @@
           </table>
           <br>
 
-          <a class="govuk-c-button govuk-c-button" href="/crime/dwpdetails" role="button">Continue</a>&nbsp;&nbsp;&nbsp;&nbsp;
+          <a class="govuk-c-button govuk-c-button" href="/crime/identify-evidence" role="button">Continue</a>&nbsp;&nbsp;&nbsp;&nbsp;
           <a class="govuk-c-back-link" href="/crime/obbank">Back</a>
 
         </div>
