--- a/app/views/crime/obconsent.html
+++ b/app/views/crime/obconsent.html
@@ -19,7 +19,7 @@
     <div class="govuk-o-grid">
       <div class="govuk-o-grid__item govuk-o-grid__item--two-thirds">
 
-        <form class="form" action="/crime/obbank" method="post">
+        <form class="form" action="/crime/dwpdetails" method="post">
 
           <div class="govuk-c-checkboxes">
             <fieldset class="govuk-c-fieldset">
