--- a/app/views/crime/identify-evidence.html
+++ b/app/views/crime/identify-evidence.html
@@ -82,13 +82,13 @@
 
   <main role="main" class="govuk-o-main-wrapper">
 
-    <p class="govuk-body"><b>Step 8 of 15</b></p>
+    <p class="govuk-body"><b>Step 7 of 14</b></p>
 
     <div class="govuk-o-grid">
       <div class="govuk-o-grid__item govuk-o-grid__item">
 
         <h1 class="govuk-heading-xl">
-          Select transactions to support your application
+          Select transactions on your bank statement
         </h1>
         <p class="govuk-body">We need to know about regular incoming payments (such as wages, benefits or pension) and major outgoings (such as childcare, mortgage, rent or housing costs).</p>
 
@@ -803,7 +803,7 @@
           </div>
 
           <input class="govuk-c-button" type="submit" value="Continue">&nbsp;&nbsp;&nbsp;&nbsp;
-          <a class="govuk-c-back-link" href="/crime/dwpconf">Back</a>
+          <a class="govuk-c-back-link" href="/crime/bank-success">Back</a>
 
         </form>
       </div>
