--- a/app/views/crime/obbank.html
+++ b/app/views/crime/obbank.html
@@ -173,7 +173,7 @@
 
     <main role="main" class="govuk-o-main-wrapper">
 
-      <p class="govuk-body"><b>Step 3 of 15</b></p>
+      <p class="govuk-body"><b>Step 5 of 14</b></p>
 
       <div class="govuk-o-grid">
         <div class="govuk-o-grid__item govuk-o-grid__item--two-thirds">
@@ -231,7 +231,7 @@
             </div>
 
             <input class="govuk-c-button" id="myBtn" value="Continue" onclick="setTimeout(modalOpen, 1000)" style="width:auto;" readonly>&nbsp;&nbsp;&nbsp;&nbsp;
-            <a class="govuk-c-back-link" href="/crime/obconsent">Back</a>
+            <a class="govuk-c-back-link" href="/crime/dwpconf">Back</a>
 
           </form>
         </div>
