--- a/app/views/crime/valuables.html
+++ b/app/views/crime/valuables.html
@@ -14,7 +14,7 @@
 
   <main role="main" class="govuk-o-main-wrapper">
 
-    <p class="govuk-body"><b>Step 13 of 14</b></p>
+    <p class="govuk-body"><b>Step 13 of 15</b></p>
 
     <div class="govuk-o-grid">
       <div class="govuk-o-grid__item govuk-o-grid__item--two-thirds">
@@ -25,7 +25,7 @@
 
         <p class="govuk-body">Valuables include things like jewellery, antiques, paintings or collectable items.</p>
 
-        <form class="form" action="/generic/means-result" method="post">
+        <form class="form" action="/crime/means-result" method="post">
 
           <div class="govuk-c-radios">
             <fieldset class="govuk-c-fieldset" data-required data-error="Cannot be blank">
@@ -45,7 +45,7 @@
           </div>
 
           <input class="govuk-c-button" type="submit" value="Continue">&nbsp;&nbsp;&nbsp;&nbsp;
-          <a class="govuk-c-back-link" href="/generic/capitalshares">Back</a>
+          <a class="govuk-c-back-link" href="/crime/capitalshares">Back</a>
 
         </form>
 
