Moved the dwp pages before the banking pages and changed links accordingly

--- a/app/views/civil/dwpdetails.html
+++ b/app/views/civil/dwpdetails.html
@@ -14,7 +14,7 @@
 
   <main role="main" class="govuk-o-main-wrapper">
 
-    <p class="govuk-body"><b>Step 6 of 17</b></p>
+    <p class="govuk-body"><b>Step 4 of 17</b></p>
 
     <div class="govuk-o-grid">
 
@@ -65,7 +65,7 @@
           </fieldset>
 
           <input class="govuk-c-button" type="submit" value="Continue">&nbsp;&nbsp;&nbsp;&nbsp;
-          <a class="govuk-c-back-link" href="/civil/bank-success">Back</a>
+          <a class="govuk-c-back-link" href="/civil/obconsent">Back</a>
 
         </form>
 
