--- a/app/views/civil/empstatus.html
+++ b/app/views/civil/empstatus.html
@@ -14,7 +14,7 @@
 
   <main role="main" class="govuk-o-main-wrapper">
 
-    <p class="govuk-body"><b>Step 8 of 17</b></p>
+    <p class="govuk-body"><b>Step 6 of 17</b></p>
 
     <div class="govuk-o-grid">
       <div class="govuk-o-grid__item govuk-o-grid__item--two-thirds">
@@ -22,7 +22,7 @@
         <h2 class="govuk-heading-xl">
           Employment details
         </h2>
-        <form class="form" action="/civil/identify-evidence" method="get">
+        <form class="form" action="/civil/obbank" method="get">
 
           <div class="govuk-c-radios">
             <fieldset class="govuk-c-fieldset">
