--- a/app/views/civil/identify-evidence.html
+++ b/app/views/civil/identify-evidence.html
@@ -793,7 +793,7 @@
           </div>
 
           <input class="govuk-c-button" type="submit" value="Continue">&nbsp;&nbsp;&nbsp;&nbsp;
-          <a class="govuk-c-back-link" href="/civil/empstatus">Back</a>
+          <a class="govuk-c-back-link" href="/civil/bank-success">Back</a>
 
         </form>
       </div>
