--- a/app/views/civil/bank-success.html
+++ b/app/views/civil/bank-success.html
@@ -18,7 +18,7 @@
 
   <main role="main" class="govuk-o-main-wrapper">
 
-    <p class="govuk-body"><b>Step 5 of 17</b></p>
+    <p class="govuk-body"><b>Step 8 of 17</b></p>
 
     <div class="govuk-o-grid">
       <div class="govuk-o-grid__item govuk-o-grid__item--two-thirds">
@@ -66,7 +66,7 @@
           <br>
           <p class="govuk-body">Connect to HMRC and DWP to provide evidence about tax and benefits.</p>
 
-          <a class="govuk-c-button govuk-c-button" href="/civil/dwpdetails" role="button">Continue</a>&nbsp;&nbsp;&nbsp;&nbsp;
+          <a class="govuk-c-button govuk-c-button" href="/civil/identify-evidence" role="button">Continue</a>&nbsp;&nbsp;&nbsp;&nbsp;
           <a class="govuk-c-back-link" href="/civil/obbank">Back</a>
 
         </div>
