Add logout screen and confirmation to obbank

--- a/app/views/civil/bank-success.html
+++ b/app/views/civil/bank-success.html
@@ -27,6 +27,9 @@
           We connected to your bank or building society
         </h2>
 
+        <p class="govuk-body">You have been logged out of your online banking.</p>
+
+
         <h2 class="govuk-heading-m">
           Account information
         </h2>
