--- a/app/views/generic/obbank.html
+++ b/app/views/generic/obbank.html
@@ -190,7 +190,7 @@
                   <p class="govuk-heading">Choose the bank where you have your main current account. Make sure you keep your log in and password details private.</p>
                 </legend>
                 <div class="govuk-c-radios__item">
-                  <input class="govuk-c-radios__input" id="bank-1" name="bank" type="radio" value="togetherbank" checked="checked" required>
+                  <input class="govuk-c-radios__input" id="bank-1" name="bank" type="radio" value="togetherbank" required>
                   <label class="govuk-c-label govuk-c-radios__label" for="bank-1">
                   Togetherbank
                 </label>
@@ -222,7 +222,7 @@
                 </label>
                 </div>
                 <div class="govuk-c-radios__item">
-                  <input class="govuk-c-radios__input" id="other-bank-2" name="other-bank" type="radio" value="no" checked="checked">
+                  <input class="govuk-c-radios__input" id="other-bank-2" name="other-bank" type="radio" value="no">
                   <label class="govuk-c-label govuk-c-radios__label" for="other-bank-2">
                   No
                 </label>
@@ -318,8 +318,18 @@
           <li>3 months' transactions</li>
           <li>any direct debits or standing orders</li>
         </ul>
-        <button id="authorise" type="button" onclick="setTimeout(modalCloseAndSubmit, 1000)">Authorise</button>
+        <button id="authorise" type="button">Authorise</button>
         <button id="deny" type="button" onclick="setTimeout(modalClose, 1000)">Deny</button>
+        <div class="imgcontainer">
+          <img src="../public/images/secure-connection.png" alt="padlock">
+        </div>
+      </div>
+
+      <div type="modalpage" id="step5" class="hideMe" class="container">
+        <div align="center"><img src="../public/images/padlock.png" alt="padlock" height="42" width="42" style="vertical-align: middle"><b>Log out</b></div>
+        <br>
+        <h4 align="center">Now log out of your online banking</h4>
+        <button id="final" type="button" onclick="setTimeout(modalCloseAndSubmit, 1000)">Log out</button>
         <div class="imgcontainer">
           <img src="../public/images/secure-connection.png" alt="padlock">
         </div>
@@ -412,6 +422,16 @@
     });
   </script>
 
+
+  <!--move from page 4 to page 5 -->
+  <script>
+    $("#authorise").click(function() {
+      $("#step4").addClass('hideMe');
+      $("#step5").removeClass('hideMe');
+    });
+  </script>
+
+
   <!-- reset the modal -->
   <script>
     $("#myBtn").click(function() {
@@ -419,6 +439,7 @@
       $("#step2").addClass('hideMe');
       $("#step3").addClass('hideMe');
       $("#step4").addClass('hideMe');
+      $("#step5").addClass('hideMe');
     });
   </script>
 
