--- a/app/views/generic/bank-success.html
+++ b/app/views/generic/bank-success.html
@@ -27,6 +27,8 @@
           You have succesfully shared your account information
         </h2>
 
+        <p class="govuk-body">You have been logged out of your online banking.</p>
+
         <h2 class="govuk-heading-m">
           Your account(s)
         </h2>
