--- a/app/views/generic/obbank.html
+++ b/app/views/generic/obbank.html
@@ -329,6 +329,8 @@
         <div align="center"><img src="../public/images/padlock.png" alt="padlock" height="42" width="42" style="vertical-align: middle"><b>Log out</b></div>
         <br>
         <h4 align="center">Now log out of your online banking</h4>
+        <br>
+        <p class="govuk-body" align="center">This will allow you to continue your application.</p>
         <button id="final" type="button" onclick="setTimeout(modalCloseAndSubmit, 1000)">Log out</button>
         <div class="imgcontainer">
           <img src="../public/images/secure-connection.png" alt="padlock">
